--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,13 @@
       "source.fixAll.stylelint": "always"
     }
   },
-  "biome.lspBin": "./node_modules/@biomejs/biome/bin/biome",
+  "[jsonc]": {
+    "editor.defaultFormatter": "biomejs.biome",
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": "always"
+    }
+  },
+  "biome.lspBin": "node_modules/.bin/biome",
   "stylelint.configBasedir": ".",
   "stylelint.validate": ["css", "scss"],
   "prettier.requireConfig": false,
@@ -40,5 +46,5 @@
   "cSpell.words": ["biomejs"],
   "cSpell.allowCompoundWords": true,
   "cSpell.ignorePaths": ["**/node_modules/**", "**/vscode-extension/**"],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
