--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -2,36 +2,38 @@
   "name": "app",
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "prepare": "pnpm gen",
-    "gen": "conc -c auto pnpm:gen:*",
-    "gen:css": "panda codegen",
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js"
-  },
   "license": "UNLICENSED",
+  "scripts": {
+    "prepare": "panda codegen",
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && dotenv -e .env -- opennextjs-cloudflare deploy",
+    "lint": "concurrently \"pnpm:lint:*\"",
+    "lint:tsc": "tsc --noEmit",
+    "lint:biome": "biome check .",
+    "fmt": "concurrently \"pnpm:fmt:*\"",
+    "fmt:biome": "biome check --write --unsafe ."
+  },
   "dependencies": {
-    "@react-router/node": "7.1.5",
-    "@react-router/serve": "7.1.5",
-    "isbot": "4",
+    "@opennextjs/cloudflare": "1.0.1",
+    "@packages/db": "workspace:*",
+    "lucide-react": "0.509.0",
+    "next": "15.3.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "7.1.5"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@packages/biome-config": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
     "@pandacss/dev": "0.48.0",
-    "@react-router/dev": "7.1.5",
+    "@tsconfig/strictest": "2.0.5",
     "@types/node": "22.13.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.3",
-    "autoprefixer": "10.4.5",
     "concurrently": "9.0.1",
-    "postcss": "8.4.49",
-    "react-router-devtools": "1.1.4",
-    "vite": "6.1.0",
-    "vite-tsconfig-paths": "5.1.4"
+    "dotenv-cli": "8.0.0",
+    "typescript": "5.6.2",
+    "wrangler": "4.14.4"
   }
 }
