--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@packages/biome-config": "workspace:*",
     "@packages/prettier-config": "workspace:*",
     "concurrently": "9.0.1",
-    "syncpack": "^13.0.0",
+    "syncpack": "13.0.0",
     "turbo": "2.2.3",
     "typescript": "5.6.2"
   }
