--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "0.509.0",
     "next": "15.3.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "ts-pattern": "5.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
