docs: update README and wrangler.jsonc for R2 bucket configuration
- Modify README to include steps for creating an R2 bucket in Cloudflare
- Update bucket name in admin wrangler.jsonc to match the new naming convention

--- a/apps/admin/wrangler.jsonc
+++ b/apps/admin/wrangler.jsonc
@@ -26,7 +26,7 @@
     // Create a R2 binding with the binding name "NEXT_INC_CACHE_R2_BUCKET"
     {
       "binding": "NEXT_INC_CACHE_R2_BUCKET",
-      "bucket_name": "web-app-template-admin"
+      "bucket_name": "web-app-template"
     }
   ]
 }
