feat: update dependencies in pnpm-lock and package.json
- Add '@auth0/nextjs-auth0' version 4.5.1 to package.json for authentication support

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,7 @@
     "fmt:biome": "biome check --write --unsafe ."
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "4.5.1",
     "@opennextjs/cloudflare": "1.0.1",
     "@packages/db": "workspace:*",
     "lucide-react": "0.509.0",
