--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,10 @@ DATABASE_URL="XXXX"
 
 # Cloudflare API Token
 CLOUDFLARE_API_TOKEN="XXXX"
+
+# Auth0
+AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+APP_BASE_URL='http://localhost:3001'
+AUTH0_DOMAIN='XXXX'
+AUTH0_CLIENT_ID='XXXX'
+AUTH0_CLIENT_SECRET='XXXX'
