feat: add migrate:deploy script to package.json for Prisma migrations
- Introduce migrate:deploy script to facilitate deployment of database migrations
- Enhance existing migration workflow with additional command for production environments

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "gen": "prisma generate --no-engine",
-    "migrate:dev": "prisma migrate dev"
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "prisma": {
     "seed": "pnpm vite-node prisma/seed.ts"
