--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,6 +19,7 @@
     "@auth0/nextjs-auth0": "4.5.1",
     "@opennextjs/cloudflare": "1.0.1",
     "@packages/db": "workspace:*",
+    "@radix-ui/react-popover": "1.1.13",
     "lucide-react": "0.509.0",
     "next": "15.3.2",
     "react": "19.0.0",
