chore: update environment configuration and scripts
- Add APP_BASE_URL to .env.template for better environment setup.
- Modify .gitignore to include .env.production for environment management.
- Update package.json deploy script to sync secrets before deployment.
- Introduce set-secrets.sh script for managing environment variables securely.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,8 +7,9 @@
     "prepare": "panda codegen",
     "dev": "next dev -p 3001",
     "build": "next build",
+    "secret:sync": "bash scripts/set-secrets.sh .env.production",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && dotenv -e .env -- opennextjs-cloudflare deploy",
+    "deploy": "pnpm secret:sync && opennextjs-cloudflare build && dotenv -e .env.production -- opennextjs-cloudflare deploy",
     "lint": "concurrently \"pnpm:lint:*\"",
     "lint:tsc": "tsc --noEmit",
     "lint:biome": "biome check .",
