--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "4.5.1",
+    "@hookform/resolvers": "5.0.1",
     "@opennextjs/cloudflare": "1.0.1",
     "@packages/db": "workspace:*",
     "@radix-ui/react-popover": "1.1.13",
@@ -25,7 +26,9 @@
     "next": "15.3.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "ts-pattern": "5.7.0"
+    "react-hook-form": "7.57.0",
+    "ts-pattern": "5.7.0",
+    "valibot": "1.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
