--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
       "source.fixAll.stylelint": "always"
     }
   },
-  "biome.lspBin": "node_modules/.bin/biome",
+  "biome.lsp.bin": "packages/biome-config/node_modules/.bin/biome",
   "stylelint.configBasedir": ".",
   "stylelint.validate": ["css", "scss"],
   "prettier.requireConfig": false,
