feat: add uploadImage function to handle image uploads to Cloudflare R2

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,13 @@ DATABASE_URL="XXXX"
 # Cloudflare API Token
 CLOUDFLARE_API_TOKEN="XXXX"
 
+# Cloudflare R2
+NEXT_PUBLIC_R2_BUCKET_NAME="XXXX"
+NEXT_PUBLIC_R2_BUCKET_URL="XXXX"
+NEXT_PUBLIC_R2_ACCESS_KEY="XXXX"
+NEXT_PUBLIC_R2_SECRET_KEY="XXXX"
+NEXT_PUBLIC_R2_ENDPOINT="XXXX"
+
 # Auth0
 APP_BASE_URL='XXXX'
 AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
