🔧 remove Auth0 integration and update environment configuration

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+APP_BASE_URL='http://localhost:3000'
+
 # Prisma Postgres Database URL
 DATABASE_URL="XXXX"
 
@@ -11,9 +13,5 @@ NEXT_PUBLIC_R2_ACCESS_KEY="XXXX"
 NEXT_PUBLIC_R2_SECRET_KEY="XXXX"
 NEXT_PUBLIC_R2_ENDPOINT="XXXX"
 
-# Auth0
-APP_BASE_URL='XXXX'
-AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
-AUTH0_DOMAIN='XXXX'
-AUTH0_CLIENT_ID='XXXX'
-AUTH0_CLIENT_SECRET='XXXX'
+# Auth.js
+AUTH_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
